    - Use tips and tricks if no informatron is available
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 08.11.2021
  Changes:
    - Added support for mod "traintunnels"
  Fixes:
    - Fixed teleport by destroying & creating the train, as used in traintunnels
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 19.02.2022
  Changes:
    - Disabled deconstruction by bots
    - Decreased collision mask to prevent collisions with SE-walls
    - Entering an unused motor car (placed by the editor) binds it to the player
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 30.04.2022
  Features:
    - Added support for mods which add their own locomotives. The motor car copies their visuals and speed.
  Changes:
    - Changed internal names of all prototypes to simplify the mod-support
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 30.04.2022
  Fixes:
    - Fixed missing icon definition
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 30.04.2022
  Fixes:
    - Fixed wrong icons
    - Fixed exceptions from missing data
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 29.05.2022
  Changes:
    - Decreased braking force to prevent gate crashes on full speed
    - When a spidertron stands on top of the rails, entering is preferred over the motor car.
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 20.06.2022
  Fixes:
    - Fixed game crash when pressing <rotate> immediately after the motor car was destroyed